@@ -10,6 +10,7 @@ Enhancements:
 
 Fixes:
 
+* Fix touch contact's updated_at on stay in touch trigger job
 * Fix relationship list view
 * Fix relationship id with no gender
 * Fix some UX errors
